single page topic

--- a/blog_tracker_dir/templates/blog_tracker_dir/index.html
+++ b/blog_tracker_dir/templates/blog_tracker_dir/index.html
@@ -1,3 +1,7 @@
-<h1>Blog Tracker</h1>
+{% extends "blog_tracker_dir/base.html" %}
+
+{% block content %} 
 
 <p><em>Put your thoughts here...</em></p>
+
+{% endblock content %} 
